[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Script/Buff/BasicBuff.gd" id="1"]

[node name="BasicBuff" type="Node"]
script = ExtResource( "1" )

[node name="CyeleTimer" type="Timer" parent="."]

[node name="ReduceTimer" type="Timer" parent="."]

[node name="QueueTimer" type="Timer" parent="."]

[connection signal="timeout" from="CyeleTimer" to="." method="_on_cyele_timer_timeout" flags=18]
[connection signal="timeout" from="ReduceTimer" to="." method="_on_reduce_timer_timeout" flags=18]
[connection signal="timeout" from="QueueTimer" to="." method="_on_queue_timer_timeout" flags=18]
